--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -8,7 +8,7 @@ on:
         docker_image:
           description: 'The Docker image to scan'
           required: true
-          default: 'unity/accelerator:latest'
+          default: 'tidepool/mailer:master-latest'
 
 # env:
 #   REGISTRY: ghcr.io
